Bug 137432 - Value of object property is not shown in the Watch window after disable "Use Skia for all rendering"
Summary: Value of object property is not shown in the Watch window after disable "Use ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
7.0.2.2 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-10-12 17:09 UTC by Vladimir Sokolinskiy
Modified: 2020-10-30 16:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir Sokolinskiy 2020-10-12 17:09:35 UTC
Description:
In version 7.0.2, the values of object properties in the Watch window are no longer displayed

Steps to Reproduce:
1. Add "arg" variable to Watch window
2. Execute the following macro step by step:

Sub Main
   Dim arg as new com.sun.star.beans.PropertyValue 
   arg.Name="Name"
   arg.Value="Value"
End Sub




Actual Results:
Values of Name and Value properties of arg object are not displayed in the Watch window

Expected Results:
In previous versions of office, object properties were displayed in a Windows window


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.2.2 (x64)
Build ID: 8349ace3c3162073abd90d81fd06dcfb6b36b994
CPU threads: 6; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: ru-RU (ru_RU); ИП: ru-RU
Calc: threaded
Comment 1 Xisco Faulí 2020-10-12 18:39:16 UTC
I can't reproduce it in

Version: 7.1.0.0.alpha0+
Build ID: a9976a958b2857e308c6598532151878615bfd9f
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

nor in

Version: 7.0.2.0.0+
Build ID: b27137a7091104cce177791478e86d127680c9af
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

To be certain the reported issue is not related to corruption in the user profile, could you please reset your Libreoffice profile ( https://wiki.documentfoundation.org/UserProfile ) and re-test?

I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the issue is still present
Comment 2 Vladimir Sokolinskiy 2020-10-13 09:01:06 UTC
Thanks a lot for the comment!

Yes, indeed, the problem appears after disabling the "Use Skia for all renrering" option in Options / View.

Version 7.0.1 does not have this problem.

I apologize for the initially incomplete information.
Comment 3 Xisco Faulí 2020-10-15 13:04:39 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8b806dc8dc5671090b129a3c4b2cde7171114817

author	Caolán McNamara <caolanm@redhat.com>	2020-09-10 09:33:39 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-09-10 15:24:27 +0200
commit 8b806dc8dc5671090b129a3c4b2cde7171114817 (patch)
tree 078ff8fa0190942a9446188801b7e798b00c2bd1
parent 436cf6d31deb7f9594a5da52ec7883d7e3d34344 (diff)
tdf#131581 inhibit updates during all_foreach

Bisected with: win-7.1

Adding Cc: to Caolán McNamara
Comment 4 Commit Notification 2020-10-15 18:41:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/da88a1b6bb48ea6f933e1121927d2dcaeae47866

tdf#137432 only do EnableInvalidate(false) optimization when not shown

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2020-10-16 15:38:58 UTC
That should fix it, just do that special optimization when the treeview is not visible, limiting it to the expert dialog in practice requiring opt-in to use it when its known to work
Comment 6 Commit Notification 2020-10-17 22:09:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/23614f72bb14bad45bce1966242e0763825260c4

tdf#137432 only do EnableInvalidate(false) optimization when not shown

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-10-30 11:05:34 UTC
Verified in

Version: 7.0.3.1 (x86)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); Interfaz: es-ES
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 8 Vladimir Sokolinskiy 2020-10-30 16:22:29 UTC
Verified in

Version: 7.0.3.1 (x64)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 6; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: ru-RU (ru_RU); ИП: ru-RU
Calc: threaded

Thanks from me too!