tdf#137432 only do EnableInvalidate(false) optimization when not shown

Change-Id: If7f35d19061a7a2db2e5df31227834526bbf0905